# salesforce-healthcare-mcp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  DESIGN_DECISIONS.md  README.md  pyproject.toml
.github/.github/: pull_request_template.md
.github/.github/workflows/: format_check.yaml
.github/workflows/: format_check.yaml  lint.yaml  mypy.yaml
src/mcp_salesforce/: config.py  server.py
src/mcp_salesforce/salesforce/: client.py  http_methods.py  models.py
src/mcp_salesforce/tools/: appointments.py
