[tool.poetry]
name = "mcp coding test"
version = "0.1.0"
description = ""
authors = ["nh916"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
pydantic = "^2.12.5"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^8.0.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
autoflake = "^2.3.2"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
